fix spacing I noticed on larger screensize

--- a/src/App.css
+++ b/src/App.css
@@ -85,14 +85,17 @@
   margin: 1.5em;
 }
 
-.side-sheet {
+#side-sheet {
   background-color: #e1e3eb;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
+
+
 .side-poster-container {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -101,7 +104,7 @@
 }
 
 .side-poster {
-  width: 70%;
+  width: 60%;
   margin: 1em;
   border-radius: 30px;
   box-shadow: 0px 0px 8px 5px rgba(184,182,184,1);
@@ -114,12 +117,12 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  width: 90%;
+  width: 85%;
   height: 100%;
   border-radius: 30px;
   box-shadow: 0px 10px 8px 5px rgba(199,199,199,1);
   margin-top: 25em;
-  margin-left: 2em;
+  margin-left: 3em;
 }
 
 .add-button {
